--- a/te_appd.yml
+++ b/te_appd.yml
@@ -36,7 +36,7 @@ ThousandEyes:
     teKey: ""
     #Thousand Eyes Account Group
     #Uncommend if there are more than one account groups for account
-    #teAccountGroup: ""
+    teAccountGroup: ""
   AppDynamics:
     #Events Service endpoint in the format of protocol:uri:port example https://fra-ana-api.saas.appdynamics.com:443
     #Value should be within double quotes
